flicker fix

--- a/styles/modules/components/homeTemplate.module.scss
+++ b/styles/modules/components/homeTemplate.module.scss
@@ -14,6 +14,7 @@
     transform: translateZ(0);
     transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
     -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
     -moz-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     
